@@ -25,12 +25,12 @@ dependencies {
     compile 'org.apache.commons:commons-collections4:4.4'
     compile 'org.apache.commons:commons-dbcp2:2.9.0'
     compile 'commons-net:commons-net:3.8.0'
-    compile 'org.apache.httpcomponents:httpclient:4.5.13'
+    compile 'org.apache.httpcomponents:httpclient:4.5.14'
     compile 'org.apache.logging.log4j:log4j-api:2.19.0'
     compile 'org.apache.logging.log4j:log4j-core:2.19.0'
-    compile 'com.oracle.database.jdbc:ojdbc8:19.10.0.0'
-    compile 'org.springframework:spring-beans:5.3.8'
-    compile 'org.springframework:spring-jdbc:5.3.8'
+    compile 'com.oracle.database.jdbc:ojdbc8:21.1.0.0'
+    compile 'org.springframework:spring-beans:5.3.9'
+    compile 'org.springframework:spring-jdbc:5.3.9'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
