@@ -1,3 +1,7 @@
+Jan 06, 2023
+  parser: added 'dbGAP','PubChem_Cell_line' to list of ignored XDB IDS
+          added handling of comment tags: 'Virology:', 'Senescence', 'Donor information:'
+
 Oct 07, 2022
   parser: added 'ICLDB' to list of ignored XDB IDS
 
